test and fix default constraint handlers